--- a/eventos.html
+++ b/eventos.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857' } } } }
+      theme: { extend: { colors: { red: { 50:'#ecfdf5', 100:'#fee2e2', 200:'#fecaca', 400:'#f87171', 500:'#ef4444', 600:'#dc2626', 700:'#b91c1c' } } } }
     }
   </script>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -52,8 +52,8 @@
   <aside id="sidebar" class="fixed left-0 top-0 z-50 h-full w-[280px] -translate-x-full bg-white backdrop-blur border-r border-slate-200 transition-transform">
     <div class="p-4 border-b border-slate-200 flex items-center justify-between">
       <div class="flex items-center gap-2">
-        <div class="h-9 w-9 rounded-xl bg-emerald-500/15 ring-1 ring-emerald-400/20 flex items-center justify-center">
-          <i data-lucide="shield" class="h-5 w-5 text-emerald-700"></i>
+        <div class="h-9 w-9 rounded-xl bg-red-500/15 ring-1 ring-red-400/20 flex items-center justify-center">
+          <i data-lucide="shield" class="h-5 w-5 text-red-700"></i>
         </div>
         <div class="leading-tight">
           <div class="text-slate-900 font-black">Guilda • HUB</div>
@@ -100,7 +100,7 @@
           <div class="text-xs text-slate-500">Eventos • Camps</div>
         </div>
       </div>
-      <a href="index.html" class="text-sm font-semibold text-emerald-700 hover:text-emerald-800">Voltar</a>
+      <a href="index.html" class="text-sm font-semibold text-red-700 hover:text-red-800">Voltar</a>
     </div>
   </header>
 
@@ -116,7 +116,7 @@
     <div class="flex-1">
       <label class="text-xs text-slate-500">Pesquisar</label>
       <input id="q" type="text" placeholder="Ex: nome da guilda, título, descrição..."
-        class="mt-1 w-full rounded-2xl bg-white ring-1 ring-slate-200 px-4 py-3 text-sm outline-none focus:ring-emerald-400/40" />
+        class="mt-1 w-full rounded-2xl bg-white ring-1 ring-slate-200 px-4 py-3 text-sm outline-none focus:ring-red-400/40" />
     </div>
     <div class="w-full sm:w-[280px]">
       <label class="text-xs text-slate-500">Filtro</label>
@@ -390,8 +390,8 @@ function render(items) {
       }
       const ico = safeStr(pick(d, ["icon","icone","symbol"], "")).trim();
       const useIco = ico ? ico : (isPaid ? "badge-dollar-sign" : "trophy");
-      return `<div class="h-14 w-14 rounded-2xl bg-emerald-600/10 ring-1 ring-emerald-500/20 grid place-items-center">
-        <i data-lucide="${useIco}" class="h-6 w-6 text-emerald-700"></i>
+      return `<div class="h-14 w-14 rounded-2xl bg-red-600/10 ring-1 ring-red-500/20 grid place-items-center">
+        <i data-lucide="${useIco}" class="h-6 w-6 text-red-700"></i>
       </div>`;
     })();
 
