--- a/upgrade.html
+++ b/upgrade.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>
-    tailwind.config = { theme: { extend: { colors: { emerald: { 50:'#ecfdf5', 100:'#d1fae5', 200:'#a7f3d0', 400:'#34d399', 500:'#10b981', 600:'#059669', 700:'#047857'} } } } }
+    tailwind.config = { theme: { extend: { colors: { red: { 50:'#ecfdf5', 100:'#fee2e2', 200:'#fecaca', 400:'#f87171', 500:'#ef4444', 600:'#dc2626', 700:'#b91c1c'} } } } }
   </script>
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -21,7 +21,7 @@
     <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
       <div class="flex items-center justify-between p-5 border-b border-gray-100">
         <div class="flex items-center gap-3">
-          <div class="w-10 h-10 bg-gradient-to-br from-emerald-500 to-green-600 rounded-xl flex items-center justify-center shadow-lg shadow-green-200">
+          <div class="w-10 h-10 bg-gradient-to-br from-red-500 to-red-600 rounded-xl flex items-center justify-center shadow-lg shadow-red-200">
             <i data-lucide="shield" class="w-5 h-5 text-white"></i>
           </div>
           <div>
@@ -44,7 +44,7 @@
         <a href="ajustes.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
           <i data-lucide="sliders" class="w-5 h-5"></i> Ajustes
         </a>
-        <a href="upgrade.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-emerald-50 text-emerald-700 shadow-sm">
+        <a href="upgrade.html" class="w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium bg-red-50 text-red-700 shadow-sm">
           <i data-lucide="sparkles" class="w-5 h-5"></i> Upgrade
         </a>
         <a href="camp.html" class="only-leader w-full flex items-center gap-3 px-4 py-3 rounded-xl text-sm font-medium text-gray-500 hover:bg-gray-50 hover:text-gray-700 transition-colors">
@@ -61,7 +61,7 @@
       <div class="absolute bottom-0 left-0 right-0 p-4 border-t border-gray-100">
         <div class="flex items-center justify-between px-3 py-2">
           <div class="flex items-center gap-3">
-            <div class="w-8 h-8 rounded-full bg-emerald-100 flex items-center justify-center text-emerald-700 font-bold text-sm">A</div>
+            <div class="w-8 h-8 rounded-full bg-red-100 flex items-center justify-center text-red-700 font-bold text-sm">A</div>
             <div>
               <p id="user-role" class="text-sm font-medium text-gray-700">Carregando...</p>
               <p id="user-email" class="text-xs text-gray-400 truncate w-24">...</p>
@@ -86,7 +86,7 @@
             <div class="flex items-center gap-2 w-full flex-nowrap">
               <h1 class="text-xl font-extrabold text-gray-900 leading-tight">Upgrade</h1>
               <span id="current-plan-pill" class="inline-flex items-center gap-2 px-3 py-1.5 rounded-xl bg-gray-50 text-gray-600 text-sm border border-gray-200 whitespace-nowrap ml-auto">
-                <i data-lucide="sparkles" class="w-4 h-4 text-emerald-500"></i>
+                <i data-lucide="sparkles" class="w-4 h-4 text-red-500"></i>
                 <span>Plano atual: <b id="current-plan-name">—</b></span>
               </span>
             </div>
@@ -102,7 +102,7 @@
         </div>
       </section>
 
-      <footer id="otk-footer" class="mt-12 border-t border-emerald-500/10 text-slate-700">
+      <footer id="otk-footer" class="mt-12 border-t border-red-500/10 text-slate-700">
         <div class="mx-auto w-full max-w-5xl px-4 py-10">
           <div class="flex flex-col items-center gap-4">
             <div class="flex items-center justify-center gap-3">
@@ -264,7 +264,7 @@
 
   function badgeClass(status){
     const s = statusLabelFromMp(status);
-    if (s === 'aprovado') return 'bg-emerald-50 text-emerald-700 ring-emerald-200';
+    if (s === 'aprovado') return 'bg-red-50 text-red-700 ring-red-200';
     if (s === 'pendente') return 'bg-amber-50 text-amber-700 ring-amber-200';
     if (s === 'recusado') return 'bg-rose-50 text-rose-700 ring-rose-200';
     if (s === 'expirado') return 'bg-gray-100 text-gray-700 ring-gray-200';
@@ -345,12 +345,12 @@
 
           <div>
             <label class="text-xs font-bold text-gray-600">PIX Copia e Cola</label>
-            <textarea id="pix-code" class="mt-2 w-full h-36 rounded-xl border border-gray-200 bg-gray-50 p-3 text-xs text-gray-800 focus:outline-none focus:ring-2 focus:ring-emerald-200" readonly></textarea>
+            <textarea id="pix-code" class="mt-2 w-full h-36 rounded-xl border border-gray-200 bg-gray-50 p-3 text-xs text-gray-800 focus:outline-none focus:ring-2 focus:ring-red-200" readonly></textarea>
             <div class="mt-3 flex flex-col sm:flex-row gap-2">
               <button id="btn-copy-pix" class="w-full sm:w-auto inline-flex items-center justify-center gap-2 px-4 py-2 rounded-xl bg-gray-900 text-white text-sm font-bold hover:bg-black transition" disabled>
                 <i data-lucide="copy" class="w-4 h-4"></i> Copiar código
               </button>
-              <button id="btn-refresh-status" class="w-full sm:flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 rounded-xl bg-emerald-600 text-white text-sm font-extrabold hover:bg-emerald-700 transition" disabled>
+              <button id="btn-refresh-status" class="w-full sm:flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 rounded-xl bg-red-600 text-white text-sm font-extrabold hover:bg-red-700 transition" disabled>
                 <i data-lucide="refresh-ccw" class="w-4 h-4"></i> Atualizar status
               </button>
             </div>
@@ -471,10 +471,10 @@
 
     box.innerHTML = plans.map(p => {
       const isCurrent = p.id === currentTier;
-      const border = isCurrent ? 'border-emerald-200 ring-2 ring-emerald-100' : 'border-gray-200';
-      const tag = isCurrent ? '<span class="px-2 py-1 rounded-lg bg-emerald-50 text-emerald-700 text-[10px] font-bold border border-emerald-200">Atual</span>' : '';
+      const border = isCurrent ? 'border-red-200 ring-2 ring-red-100' : 'border-gray-200';
+      const tag = isCurrent ? '<span class="px-2 py-1 rounded-lg bg-red-50 text-red-700 text-[10px] font-bold border border-red-200">Atual</span>' : '';
 
-      const accessList = p.access.map(x => `<li class="flex items-start gap-2"><i data-lucide="check" class="w-3.5 h-3.5 mt-0.5 text-emerald-500"></i><span>${x}</span></li>`).join('');
+      const accessList = p.access.map(x => `<li class="flex items-start gap-2"><i data-lucide="check" class="w-3.5 h-3.5 mt-0.5 text-red-500"></i><span>${x}</span></li>`).join('');
       const noAccessList = (p.noAccess || []).map(x => `<li class="flex items-start gap-2 text-gray-400"><i data-lucide="x" class="w-3.5 h-3.5 mt-0.5"></i><span>${x}</span></li>`).join('');
 
       return `
@@ -484,7 +484,7 @@
             ${tag}
           </div>
           <div class="text-lg font-black text-gray-900 leading-none">${p.priceLabel}</div>
-          ${p.discount > 0 ? `<div class="text-[10px] text-emerald-600 font-bold mt-1">Economize ${p.discount}%</div>` : ''}
+          ${p.discount > 0 ? `<div class="text-[10px] text-red-600 font-bold mt-1">Economize ${p.discount}%</div>` : ''}
           
           <div class="mt-4 flex-1">
             <div class="text-[10px] font-bold text-gray-400 uppercase tracking-wider mb-2">Acesso</div>
@@ -493,7 +493,7 @@
           </div>
 
           ${p.note ? `<div class="mt-3 text-[10px] text-gray-500 italic">${p.note}</div>` : ''}
-          ${!isCurrent ? `<button onclick="requestUpgrade('${p.id}')" class="mt-3 w-full py-2 rounded-lg bg-emerald-600 text-white font-bold text-xs hover:bg-emerald-700 transition">Solicitar</button>` : ''}
+          ${!isCurrent ? `<button onclick="requestUpgrade('${p.id}')" class="mt-3 w-full py-2 rounded-lg bg-red-600 text-white font-bold text-xs hover:bg-red-700 transition">Solicitar</button>` : ''}
         </div>
       `;
     }).join('');
